Add cache busting and debugging for contact form - Version 2.0

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Archit Jain - Full Stack Developer &amp; AI Enthusiast</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css?v=2.0">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 </head>
@@ -352,6 +352,7 @@
                     </form>
                     <div class="contact-alternative">
                         <p><strong>Alternative:</strong> Email me directly at <a href="mailto:architjain2501@gmail.com">architjain2501@gmail.com</a></p>
+                        <p style="font-size: 0.8em; opacity: 0.7; margin-top: 0.5rem;">Form Version 2.0 - Uses direct email approach</p>
                     </div>
                 </div>
             </div>
@@ -373,6 +374,6 @@
         </div>
     </footer>
 
-    <script src="script.js"></script>
+    <script src="script.js?v=2.0"></script>
 </body>
 </html>
